@@ -8,7 +8,6 @@
 #include "game.h" //to use centerOn function
 
 #include <QKeyEvent>
-#include <QDebug>
 #include <QFont>
 #include <cmath>
 
@@ -23,11 +22,13 @@ extern double airspeed;
 extern double RC;
 
 double altitude = screenHeight /3;
-int brakes = 0;
+bool brakes = false;
 int thrust = 50;
 bool crash = false;
 bool succesfulLanding = false;
+bool brakesOk = false;
 int key[4]; //for ability to recieve 2 keys at once instead of 1, also fixes fluidity when change in planeAngle
+int limit = 90; //variable so that when plane lands, it can't go into the ground
 
 Plane::Plane()
 {
@@ -47,8 +48,6 @@ Plane::Plane()
     thrustTimer->start(250);
 }
 
-
-
 void Plane::keyPressEvent(QKeyEvent *event)
 {
     switch (event->key())
@@ -65,7 +64,18 @@ void Plane::keyPressEvent(QKeyEvent *event)
         case Qt::Key_Right:
             key[3] = 1;
             break;
-        }
+        case Qt::Key_F:
+            if(flapAngle < 40){flapAngle++;}else{flapAngle = 0;}
+            break;
+        case Qt::Key_G:
+            if(flapAngle > 0){flapAngle--;}
+            break;
+        case Qt::Key_S:
+            if(spoiler < 2){spoiler++;}else{spoiler = 0;}
+            break;
+        case Qt::Key_B:
+            if(brakesOk == true){brakes = true;}
+    }
 }
 
 void Plane::keyReleaseEvent(QKeyEvent *event)
@@ -74,19 +84,15 @@ void Plane::keyReleaseEvent(QKeyEvent *event)
     {
     case Qt::Key_Up:
         key[0] = 0;
-        qDebug() << "released Up";
         break;
     case Qt::Key_Down:
         key[1] = 0;
-        qDebug() << "released Down";
         break;
     case Qt::Key_Left:
         key[2] = 0;
-        qDebug() << "released Left";
         break;
     case Qt::Key_Right:
         key[3] = 0;
-        qDebug() << "released Right";
         break;
     }
 }
@@ -101,11 +107,24 @@ void Plane::planeThrust()
 void Plane::movePlane()
 {
 
-    if((-RC < -2.5 && pos().x() > 4400 && pos().y() > screenHeight - 330) || (pos().y() > 600) || (pos().x() > 4265 && pos().y() > screenHeight - 329)){
+    if(key[0] == 1 && key[2] == 1){if(thrust < 100){thrust++;} if(planeAngle > -90){planeAngle--;}} //Up arrow + left arrow
+    else if(key[0] == 1 && key[3] == 1){if(thrust < 100){thrust++;} if(planeAngle < limit)planeAngle++;} //Up arrow + right arrow
+    else if(key[1] == 1 && key[2] == 1){if(thrust > 0){thrust--;} if(planeAngle > -90)planeAngle--;} //Up arrow + left arrow
+    else if(key[1] == 1 && key[3] == 1){if(thrust > 0){thrust--;} if(planeAngle < limit)planeAngle++;} //Up arrow + right arrow
+    else if(key[0] == 1 && thrust < 100){thrust++;}
+    else if(key[1] == 1 && thrust > 0){thrust--;}
+    else if(key[2] == 1 && planeAngle > -90){planeAngle--;}
+    else if(key[3] == 1 && planeAngle < limit){planeAngle++;}
+
+    setRotation(planeAngle);
+
+    if((-RC < -2.5 && pos().x() > 4400 && pos().y() > screenHeight - 313) || (pos().y() > 600) || (pos().x() > 4265 && pos().y() > screenHeight - 311.5)){
         crash = true;
         altitude = screenHeight /3;
         RC = 0;
+        thrust = 50;
         speed = 117.5;
+        flapAngle = 0;
         planeAngle = -10;
         moveTimer->stop();
         thrustTimer->stop();
@@ -117,23 +136,14 @@ void Plane::movePlane()
         exit(EXIT_SUCCESS);
     }
 
-    if(key[0] == 1 && key[2] == 1){thrust++; planeAngle--;} //Up arrow + left arrow
-    else if(key[0] == 1 && key[3] == 1){if(thrust < 100){thrust++;} planeAngle++;} //Up arrow + right arrow
-    else if(key[1] == 1 && key[2] == 1){if(thrust > 1){thrust--;} planeAngle--;} //Up arrow + left arrow
-    else if(key[1] == 1 && key[3] == 1){thrust--; planeAngle++;} //Up arrow + right arrow
-    else if(key[0] == 1){thrust++;}
-    else if(key[1] == 1){thrust--;}
-    else if(key[2] == 1){planeAngle--;}
-    else if(key[3] == 1){planeAngle++;}
-
-    setRotation(planeAngle);
-
-    if(brakes > 0 && speed > 0){
+    if(brakes == true && speed > 0){
         speed -= sin(speed)*5;
         thrust = 0;
     }
 
-    if(pos().x() > 4400 && pos().y() > screenHeight - 330 && pos().y() < screenHeight -327.5){
+    if(pos().x() > 4400 && pos().y() > screenHeight - 313 && pos().y() < screenHeight -311.5){
+        brakesOk = true;
+        limit = 0;
         if(speed <= 5){
             succesfulLanding = true;
             return;
@@ -148,5 +158,4 @@ void Plane::movePlane()
 
     altitude += RC;
     setPos(x() + airspeed *1000/36000, altitude); // 36000 to make it fit to the scene, should be 3600 for m/s
-
 }
